CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.2:
 2: (2010-04-30)
  use opendap-2.2.jar (new parser)
  DAS parser is now assumed to handle escaping and remove "" from strings
  Length check is now zero based for Grib(1|2)PDSVariables
  Grib now uses CF-1.4, other CF global attributes were modified
  Fmrc: parameterized best dataset
  DatasetCollectionManager delete old metadata entries
  FmrcInvLite, time coord variants
  monotonize Lon coordinate axis
  Christian Ward-Garrison improvements on FileWriter
  NetcdfFileWritable: check for record variable on rewrite, unlimited dimension must be first
  Aggregation.closeDataset() : dont   null out the dataset list.
  StringUtil.split()
  refactor Fmrc implementation to eliminate retained fmrcInv, orgVar..
  ucar.nc2.util.NamedAnything
  CoordinateAxis1D: defer constructing edge, bounds arrays.
  GridCoordSys: defer constructing times, levels arrays.
 1: (2010-03-29)
  try to get IndexConstant right
  Section.reduce()
  EnumTypedef is immutable
  Variable.getCachedData() convenience
  NetcdfFile.getDetailInfo : show cached variables, proxyReader
  ToolsUI deferred construction, remove DQCchooser tab
  DLCrawler improvememts
  ComboBox - context menu to delete items
  refactor Fmrc implementation

Changes in version 4.1:
 15:
  VariableDS.getEnhanceMode is public
  GridCoordSys accepts runtime or time
  bug in N3header when nvars = 0.
 14:
  fix union aggregation when there's Groups
  DPA added to NIDS
  Nowrad iosp
  clarify MSGnavigation parameters
  improved Cosmic1Convention
  NsslRadarMosaic Convention: dont use the NcML, test for variable names
  Grib: Curvilinear Orthogonal projection now works
  add Aggregation.FIRST as option for choosing prototype
  earth_radius attribute on grid_mapping variable must be in meters
 13:
  new visadNoDods.jar
  N3iosp, N3header, RAF: simplify  flushing, file.setLength()
  N3 writing: bug in redefine mode.  