@@ -142,7 +142,8 @@ public class Fmrc2Dialog extends JDialog {
           String[] values = {
             "NetcdfFile Viewer",
             "CoordSys Tab",
-            "Grid FeatureType"
+            "Grid FeatureType",
+            "Detail Info"
           };
           public int getSize() { return values.length; }
           public Object getElementAt(int i) { return values[i]; }
@@ -172,8 +173,8 @@ public class Fmrc2Dialog extends JDialog {
               .addPreferredGap(LayoutStyle.ComponentPlacement.RELATED)
               .addGroup(contentPanelLayout.createParallelGroup()
                 .addComponent(comboBox2, GroupLayout.PREFERRED_SIZE, GroupLayout.DEFAULT_SIZE, GroupLayout.PREFERRED_SIZE)
-                .addComponent(list1)
-                .addComponent(comboBox1, GroupLayout.PREFERRED_SIZE, GroupLayout.DEFAULT_SIZE, GroupLayout.PREFERRED_SIZE))
+                .addComponent(comboBox1, GroupLayout.PREFERRED_SIZE, GroupLayout.DEFAULT_SIZE, GroupLayout.PREFERRED_SIZE)
+                .addComponent(list1))
               .addContainerGap(133, Short.MAX_VALUE))
         );
         contentPanelLayout.setVerticalGroup(
@@ -187,9 +188,9 @@ public class Fmrc2Dialog extends JDialog {
               .addGroup(contentPanelLayout.createParallelGroup(GroupLayout.Alignment.BASELINE)
                 .addComponent(comboBox2, GroupLayout.PREFERRED_SIZE, GroupLayout.DEFAULT_SIZE, GroupLayout.PREFERRED_SIZE)
                 .addComponent(label3))
-              .addPreferredGap(LayoutStyle.ComponentPlacement.RELATED, 34, Short.MAX_VALUE)
+              .addPreferredGap(LayoutStyle.ComponentPlacement.RELATED, 28, Short.MAX_VALUE)
               .addGroup(contentPanelLayout.createParallelGroup(GroupLayout.Alignment.BASELINE)
-                .addComponent(list1, GroupLayout.PREFERRED_SIZE, 66, GroupLayout.PREFERRED_SIZE)
+                .addComponent(list1, GroupLayout.PREFERRED_SIZE, 72, GroupLayout.PREFERRED_SIZE)
                 .addComponent(label2))
               .addContainerGap())
         );
